Add dropdown for subunit code

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,18 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label for="subunit_cd">Subunit Code</label>
-                    <input type="text" class="form-control" id="subunit_cd" placeholder="Enter Subunit Code">
-                </div>
+                    <select class="form-control" id="subunit_cd">
+                        <option value="01">Underground</option>
+                        <option value="02">Surface at Underground</option>
+                        <option value="03">Strip, Quarry, Open Pit</option>
+                        <option value="04">Auger</option>
+                        <option value="05">Culm Bank/Refuse Pile</option>
+                        <option value="06">Dredge</option>
+                        <option value="12">Other Mining</option>
+                        <option value="17">Independent Shops or Yards</option>
+                        <option value="30">Mill Operation/Preparation Plant</option>
+                        <option value="99">Office Workers at Mine Site</option>
+                    </select>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-12">
