--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,16 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label for="ug_mining_method_cd">Underground Mining Method Code</label>
-                    <input type="text" class="form-control" id="ug_mining_method_cd" placeholder="Enter Underground Mining Method Code">
+                    <select class="form-control" id="ug_mining_method_cd">
+                        <option value="01">Longwall</option>
+                        <option value="02">Shortwall</option>
+                        <option value="03">Conventional Stoping</option>
+                        <option value="05">Continuous Miner</option>
+                        <option value="06">Hand</option>
+                        <option value="07">Caving</option>
+                        <option value="08">Other</option>
+                        <option value="?">No Value Found</option>
+                    </select>
                 </div>
                 <div class="form-group col-md-12">
                     <label for="mining_equip_cd">Mining Equipment Code</label>
