Add further more dropdowns

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,20 @@
                 </div>
                 <div class="form-group col-md-12">
                     <label for="ug_location_cd">Underground Location Code</label>
-                    <input type="text" class="form-control" id="ug_location_cd" placeholder="Enter Underground Location Code">
+                    <select class="form-control" id="ug_location_cd">
+                        <option value="01">Vertical shaft</option>
+                        <option value="02">Slope/inclined shaft</option>
+                        <option value="03">Face</option>
+                        <option value="04">Intersection</option>
+                        <option value="05">Underground shop/office</option>
+                        <option value="06">Last open crosscut</option>
+                        <option value="07">Inby permanent support</option>
+                        <option value="08">Haulageway</option>
+                        <option value="09">Other entry (not haulageway)</option>
+                        <option value="98">Other</option>
+                        <option value="99">Not Marked</option>
+                        <option value="?">No Value Found</option>
+                    </select>
                 </div>
             </div>
             <div class="form-row">
